# nodle-usd-plugin

./: .gitignore  Cargo.toml  LICENSE  README.md
plugins/: libnodle_usd_plugin.dylib
src/: lib.rs  load_stage_node.rs
src/core/: create_stage.rs  get_attribute.rs  load_stage.rs  local_usd.rs  mod.rs  save_stage.rs  set_attribute.rs  test_usd.rs  usd_camera.rs  usd_composition.rs  usd_cube.rs  usd_engine.rs  usd_engine_extended.rs  usd_light.rs  usd_material.rs  usd_mesh.rs  usd_sphere.rs  usd_xform.rs
src/geometry/: capsule.rs  cone.rs  cube.rs  curves.rs  mesh.rs  mod.rs  plane.rs  points.rs  torus.rs
src/geometry/cylinder/: logic.rs  mod.rs  parameters.rs
src/geometry/sphere/: logic.rs  mod.rs  parameters.rs
src/lighting/: cylinder_light.rs  disk_light.rs  distant_light.rs  dome_light.rs  mod.rs  sphere_light.rs
src/lighting/rect_light/: logic.rs  mod.rs  parameters.rs
src/shading/: mod.rs  node_graph.rs  preview_surface.rs  primvar_reader.rs  shader.rs  texture_reader.rs
src/shading/material/: logic.rs  mod.rs  parameters.rs
src/stage/: mod.rs
src/stage/clear_stage/: mod.rs
src/stage/create_stage/: logic.rs  mod.rs  parameters.rs
src/stage/export_stage/: mod.rs
src/stage/load_stage/: mod.rs  parameters.rs
src/stage/save_stage/: mod.rs
src/transform/: matrix_transform.rs  mod.rs  rotate.rs  scale.rs  translate.rs  xform.rs
src/viewport/: camera.rs  logic.rs  mod.rs  properties.rs  usd_rendering.rs
src/viewport/shaders/: usd_grid.wgsl  usd_mesh.wgsl
