[package]
name = "nodle-usd-plugin"
version = "0.2.0"
edition = "2021"
description = "Complete USD (Universal Scene Description) plugin for Nodle node editor"
authors = ["Nodle Contributors"]
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
nodle-plugin-sdk = { path = "../nodle-plugin-sdk" }
egui = "0.31"
egui-wgpu = "0.31"
wgpu = "25"
glam = { version = "0.30", features = ["bytemuck"] }
bytemuck = { version = "1.18", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1.19"
# USD integration using Python bindings
pyo3 = { version = "0.25", features = ["auto-initialize"], optional = true }

[features]
default = [] # Disable USD feature for now to avoid Python linking issues
usd = ["pyo3"]